fixed white space bug
Added overflow to the html and body elements to fix the white space to
the right of the page bug

--- a/master.css
+++ b/master.css
@@ -5,6 +5,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 /* HOME SECTION */
